--- a/CentipedeGame/app/src/main/res/layout/activity_bluetooth_game.xml
+++ b/CentipedeGame/app/src/main/res/layout/activity_bluetooth_game.xml
@@ -1,12 +1,25 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.bbirincioglu.centipedegame.BluetoothGameActivity">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="horizontal"
+    android:gravity="center"
+    tools:context="com.example.bbirincioglu.prisonersdilemma.BluetoothGameActivity">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <Button
+        android:id="@id/hostGameButton"
+        android:text="@string/hostGameButton"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:onClick="onClick"
+        android:background="@android:color/holo_blue_light"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"/>
 
-</RelativeLayout>
+    <Button
+        android:id="@id/joinGameButton"
+        android:text="@string/joinGameButton"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:onClick="onClick"
+        android:background="@android:color/holo_blue_light"/>
+</LinearLayout>
