--- a/CentipedeGame/app/src/main/res/layout/activity_game_results.xml
+++ b/CentipedeGame/app/src/main/res/layout/activity_game_results.xml
@@ -1,12 +1,162 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.bbirincioglu.centipedegame.GameResultsActivity">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_gravity="center"
+    android:gravity="center"
+    android:orientation="vertical"
+    tools:context="com.example.bbirincioglu.prisonersdilemma.GameResultsActivity">
+    <TableLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:text="GameNo, "
+                android:textSize="8dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/holo_red_dark"/>
+            <TextView
+                android:text="PlyrFnshd, "
+                android:textSize="8dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/holo_red_dark"/>
+            <TextView
+                android:text="P1Nm, "
+                android:textSize="8dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/holo_red_dark"/>
+            <TextView
+                android:text="P1Srnm, "
+                android:textSize="8dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/holo_red_dark"/>
+            <TextView
+                android:text="P1Cmmtmnt, "
+                android:textSize="8dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/holo_red_dark"/>
+            <TextView
+                android:text="P1Pyff, "
+                android:textSize="8dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/holo_red_dark"/>
+            <TextView
+                android:text="P2Nm, "
+                android:textSize="8dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/holo_red_dark"/>
+            <TextView
+                android:text="P2Srnm, "
+                android:textSize="8dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/holo_red_dark"/>
+            <TextView
+                android:text="P2Cmmtmnt, "
+                android:textSize="8dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/holo_red_dark"/>
+            <TextView
+                android:text="P2Pyff, "
+                android:textSize="8dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/holo_red_dark"/>
+            <TextView
+                android:text="MxStpNm, "
+                android:textSize="8dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/holo_red_dark"/>
+            <TextView
+                android:text="FnlStpNm, "
+                android:textSize="8dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/holo_red_dark"/>
+            <TextView
+                android:text="Ratio, "
+                android:textSize="8dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/holo_red_dark"/>
+            <TextView
+                android:text="InitTtl, "
+                android:textSize="8dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/holo_red_dark"/>
+            <TextView
+                android:text="FnlTtl, "
+                android:textSize="8dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/holo_red_dark"/>
+            <TextView
+                android:text="Mltplctr, "
+                android:textSize="8dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/holo_red_dark"/>
+            <TextView
+                android:text="CmmtmntTyp, "
+                android:textSize="8dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/holo_red_dark"/>
+            <TextView
+                android:text="Pnshmnt"
+                android:textSize="8dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/holo_red_dark"/>
+        </TableRow>
+    </TableLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <ListView
+            android:layout_gravity="center_horizontal"
+            android:id="@id/gameResultsListView"
+            android:layout_width="match_parent"
+            android:layout_height="250dp"/>
+    </LinearLayout>
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-</RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:gravity="center">
+            <Button
+                android:text="@string/gameResultsGetResultsButton"
+                android:id="@id/gameResultsGetResultsButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="onClick"
+                android:layout_marginRight="@dimen/activity_horizontal_margin"
+                android:background="@android:color/holo_blue_light"/>
+            <Button
+                android:text="@string/gameResultsSaveResultsButton"
+                android:id="@id/gameResultsSaveResultsButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="onClick"
+                android:background="@android:color/holo_blue_light"/>
+        </LinearLayout>
+    </RelativeLayout>
+</LinearLayout>
