--- a/CentipedeGame/app/src/main/res/layout/activity_main_menu.xml
+++ b/CentipedeGame/app/src/main/res/layout/activity_main_menu.xml
@@ -1,30 +1,42 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="center"
-    android:gravity="center"
     android:orientation="vertical"
-    tools:context=".MainMenuActivity">
+    android:gravity="center"
+    tools:context=".MenuActivity">
 
     <Button
-        android:text="@string/main_menu_activity_bluetooth_game_button"
-        android:id="@id/main_menu_activity_bluetooth_game_button"
+        android:text="@string/bluetoothGameButton"
+        android:id="@id/bluetoothGameButton"
         android:layout_width="150dp"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:onClick="onClick"
+        android:background="@android:color/holo_blue_light"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"/>
+
     <Button
-        android:text="@string/main_menu_activity_settings_button"
-        android:id="@id/main_menu_activity_settings_button"
+        android:text="@string/settingsButton"
+        android:id="@id/settingsButton"
         android:layout_width="150dp"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:onClick="onClick"
+        android:background="@android:color/holo_blue_light"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"/>
+
     <Button
-        android:text="@string/main_menu_activity_game_results_button"
-        android:id="@id/main_menu_activity_game_results_button"
+        android:text="@string/gameResultsButton"
+        android:id="@id/gameResultsButton"
         android:layout_width="150dp"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:onClick="onClick"
+        android:background="@android:color/holo_blue_light"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"/>
+
     <Button
-        android:text="@string/main_menu_activity_exit_button"
-        android:id="@id/main_menu_activity_exit_button"
+        android:text="@string/exitButton"
+        android:id="@id/exitButton"
         android:layout_width="150dp"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:onClick="onClick"
+        android:background="@android:color/holo_blue_light"/>
 </LinearLayout>
